# codi

./: .gitignore  AGENT-APPROACH-STARTER.MD  COMET-OPIK.md  DEVPOST-README.md  GEMINI_SUBMISSION.md  README.md  VERCEL-AI-AGENT-BROWSER.md  codi.sh  diagram.xml  quickstart_notebook.ipynb
codi-backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  memvid_dir.txt  pyproject.toml  pytest.ini  reproduce_issue.sh  requirements.txt  test_computer_use_agent.py  test_e2e_browser_agent.py  test_knowledge_packs.py  test_workflow_integration.py  verify_memory.py
codi-backend/alembic/: env.py
codi-backend/alembic/versions/: 001_initial.py  20251230_004419_add_agent_tasks_table.py  20251230_192600_update_enums.py  20260102_074001_add_multi_platform_fields.py  20260102_082219_add_backend_connections_and_project_.py  20260110_210000_add_local_git_columns.py  20260110_220000_add_containers_deployments.py  20260112_190438_add_implementation_plans_and_tasks.py  20260112_225429_add_celery_task_id.py  20260118_083413_add_onboarding_fields.py  20260126_000000_add_chat_sessions.py  20260128_064542_add_environment_variables_table.py  20260206_000000_add_opik_tables.py  20260206_010000_add_user_opik_fields.py
codi-backend/app/: __init__.py  config.py  database.py  main.py
codi-backend/app/agent/: __init__.py  agent.py  browser_agent.py  computer_use_agent.py  executor.py  tool_tracing.py  tools.py  validator.py
codi-backend/app/agents/: AGENT_README.md  __init__.py  analyst.py  artisan.py  (+23 more)
codi-backend/docs/: CONTAINERIZED_RUNTIME.md
codi-backend/integrations/: AUTHORING_GUIDE.md
codi-backend/tests/: conftest.py  reproduce_preview_issue.py  run_e2e_test.sh  test_agent_structure_e2e.py  test_api.py  test_app_idea_flow.py  test_e2e_agent.py  test_e2e_browser_agent.py  test_e2e_deployment.py  test_e2e_opik.py  test_project_flow.py
(+332 files in other folders)
